# buddget

./: .cursorrules  .env.example  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_CONTEXT.md  README.md  capacitor.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/: ANDROID_DEBUG_GUIDE.md  APP_STORE_SUBMISSION.md  CAPACITOR_BOOTSTRAP.md  CURSOR_VERIFY_AND_DEPLOY.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  GOOGLE_PLAY_SUBMISSION.md  MONEY_MOVEMENT.md  NOTIFICATION_LISTENER.md  OFFLINE_GUIDE.md  README.md  REPO_MAP.md  SMS_PATTERN_RESEARCH.md  VERCEL_DEPLOY.md  WIDGET_SETUP.md
public/: buddget-sms-tracker.shortcut.md  manifest.json
scripts/: capacitor-build.mjs  download-subscription-icons.sh  generate-pwa-icons.mjs  generate-subscription-placeholder-icons.mjs  (+6 more)
tools/kimi/: README.md  launch-kimi.command  pyproject.toml
tools/kimi/kimi/: __init__.py  __main__.py  cache.py  catalog.py  cli.py  client.py  config.py  memory.py  policy.py  runtime.py  secrets.py
tools/kimi/kimi/agents/: base.py  chat.py  engineer.py  loop.py  swarm.py
tools/kimi/kimi/prompts/: a11y.md  budget-sync-checker.md  bundle-size.md  copy-tone.md  dead-code.md  i18n-coverage.md  onboarding-coherence.md  prompt-tuner.md  rls-auditor.md  schema-drift.md  secret-scan.md  synthesizer.md  test-gap.md  tutorial-stability.md
tools/kimi/kimi/tools/: fs.py  git.py  meta.py  registry.py  search.py  shell.py  verify.py  vision.py
tools/kimi/kimi/tui/: app.py  plan_modal.py  styles.tcss
tools/kimi/kimi/ui/: statusbar.py
(+1156 files in other folders)
