[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kimi-cli"
version = "0.1.0"
description = "Cursor / Claude-Code-style coding agent for Buddget, powered by Kimi K2.6"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "GitPython>=3.1.43",
    "pillow>=10.0.0",
    "pyperclip>=1.8.2",
]

[project.scripts]
kimi = "kimi.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["kimi*"]
